# sgicdindex

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  DIGESTS.txt  Makefile  Makefile.old  README  checkdb.c  column-name-hack.html  db.c  db.h  errsql.c  errsql.h  escape.c  escape.h  hexdump.c  hexdump.h  hw.html  index-with-ids.html  index.csv  index.html  mkcds.c  mkcsv.sql  mkdigests.sql  mkhw.c  mockup.html  notes.html  sa.c  sa.h  sgi.db  sgicdindex.c  sgicds.db  sgicdserv.c  sql.txt  styles.css
extras/: inventory.ods  ip numbers from peterhuman wiki.ods  irix prom autoload  jan-jaap  nekochanwiki  packages.txt  sc4-awe-6.5 rev zk  sgistuffnet  thomas w
